<resources>
    <string name="action_settings">Settings</string>
    <string name="action_sidebar">Sidebar</string>

    <!-- MainActivity -->
    <string name="app_name">Splitter</string>
    <string name="app_subheading">Split something</string>

    <!-- TabNameDialog -->
    <string name="dialog_tab_title">Create new tab</string>
    <string name="dialog_tab_message">Please enter a name for your tab</string>
    <string name="dialog_tab_cancel">Cancel</string>
    <string name="dialog_tab_create">Create</string>
    <string name="dialog_tab_hint">Enter tab name</string>

    <!-- AllTabsActivity -->
    <string name="all_tabs_heading">All Tabs</string>

    <!-- AddPersonActivity -->
    <string name="add_person_heading">Add Person</string>
    <string name="form_name">Name</string>
    <string name="form_phone_number">Phone number</string>

    <!-- EditPurchaseActivity -->
    <string name="edit_purchase_heading">Edit Purchase</string>
    <string name="purchase_hint">Price</string>

    <!-- EditTabActivity -->
    <string name="edit_tab_heading">Edit Tab</string>

    <!-- DeletePurchaseDialog -->
    <!-- TabNameDialogFragment -->
    <string name="dialog_purchase_title">Delete purchase</string>
    <string name="dialog_purchase_message">Are you sure you want to delete this purchase?</string>
    <string name="dialog_purchase_cancel">Cancel</string>
    <string name="dialog_purchase_delete">Delete</string>

    <!-- AddPurchaseActivity -->
    <string name="purchase_subheading">Select people who made purchases</string>
    <string name="purchase_heading">Add Purchase</string>
    <string name="purchase_input_description">Input amount paid</string>

    <!-- TODO: NAVBAR RESOURCES -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- ======================================-->


</resources>
