<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundPrimary"
    android:padding="@dimen/activity_horizontal_padding"
    tools:context="jhallman.splitter.activities.AddPurchaseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase_heading"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/heading_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_subheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase_subheading"
            android:textAlignment="center"
            android:textSize="@dimen/small_text" />

        <!-- Scroll view of contacts -->

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:padding="@dimen/activity_vertical_padding_small">

            <LinearLayout
                android:id="@+id/relativeLayout_btns"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/floating_button_height"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="horizontal">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_add_person"
                    android:layout_width="@dimen/floating_button_width"
                    android:layout_height="match_parent"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_person_add_white_24dp" />

                <!-- TODO: Load this list of buttons from contacts instead -->

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_add_contact_1"
                    android:layout_width="@dimen/floating_button_width"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_person_white_24dp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_add_contact_2"
                    android:layout_width="@dimen/floating_button_width"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_person_white_24dp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_add_contact_3"
                    android:layout_width="@dimen/floating_button_width"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_person_white_24dp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_add_contact_4"
                    android:layout_width="@dimen/floating_button_width"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_person_white_24dp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_add_contact_5"
                    android:layout_width="@dimen/floating_button_width"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_person_white_24dp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_add_contact_6"
                    android:layout_width="@dimen/floating_button_width"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_person_white_24dp" />
            </LinearLayout>

        </HorizontalScrollView>

        <!-- ===================== -->

        <TextView
            android:id="@+id/tv_input_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase_input_description"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_text" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/scrollview_height">

            <LinearLayout
                android:id="@+id/linearLayout_textViews"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/relativeLayout_textView_1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_label_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:text="Alice: "
                        android:textSize="@dimen/medium_text" />

                    <EditText
                        android:id="@+id/entry_1"
                        android:layout_width="@dimen/edit_text_width_small"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:hint="@string/purchase_hint"
                        android:inputType="number"
                        android:maxLines="1" />

                    <ImageButton
                        android:id="@+id/btn_delete_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@color/colorBackgroundPrimary"
                        app:srcCompat="@drawable/ic_delete_black_24dp" />
                </RelativeLayout>

                <!-- TODO: Remove duplicate template -->
                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/relativeLayout_textView_2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_label_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:text="Bob: "
                        android:textSize="@dimen/medium_text" />

                    <EditText
                        android:id="@+id/entry_2"
                        android:layout_width="@dimen/edit_text_width_small"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:hint="@string/purchase_hint"
                        android:inputType="number"
                        android:maxLines="1" />

                    <ImageButton
                        android:id="@+id/btn_delete_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@color/colorBackgroundPrimary"
                        app:srcCompat="@drawable/ic_delete_black_24dp" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add_purchase"
            android:layout_width="@dimen/floating_button_width_big"
            android:layout_height="@dimen/floating_button_height_big"
            android:layout_gravity="bottom|center"
            android:layout_margin="@dimen/fab_margin"
            app:backgroundTint="@color/colorPrimaryDark"
            app:srcCompat="@drawable/ic_done_white_24dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
